[FIX] Alignment of philosopher's avatar in list quote

--- a/3_philosophers/style.css
+++ b/3_philosophers/style.css
@@ -70,6 +70,7 @@
 
 .list-quote {
   display: flex;
+  justify-content: space-between;
 
   background-color: #71C671;
 }
